# Terragraf

./: .gitignore  .graphifyignore  .terragraf_settings.json  CLAUDE.md  COMMANDS.md  INSTANCES.md  NOTICE  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  TESTS.md  THIRD_PARTY_LICENSES.md  conftest.py  gen_commands_card.py  gen_skills_card.py  improvements.md  requirements-dev.txt  terra  terra.cmd  terra.py
.claude/: HOT_CONTEXT.md
.github/workflows/: ci.yml
.scaffold/: ENTRY.md  HOT_CONTEXT.md  MANIFEST.toml
.scaffold/app/: __init__.py  __main__.py  app_host.py  bridge_client.py  coherence.py  debug_page.py  external_detector.py  external_tab.py  feedback.py  ide_host_page.py  imgui_dock.py  imgui_panel.py  llm_worker.py  main.py  native_tab.py  scaffold_state.py  scaffold_watcher.py  scaling.py  session.py  settings_dialog.py  settings_page.py  tab_widget.py  theme.py  tuning_page.py  viewer_page.py  welcome_tab.py  window.py
.scaffold/app/fonts/: __init__.py
.scaffold/app/themes/: __init__.py  kohala.qss  legacy_objectnames.qss
.scaffold/app/widgets/: __init__.py  activity_feed.py  ansi.py  command_dialog.py  context_panel.py  diff_viewer.py  graph_panel.py  icon_button.py  imgui_container.py  message_card.py  panel.py  scaffold_tree.py  sidebar.py  tab_strip.py  top_bar.py
.scaffold/apps/: README
.scaffold/apps/void/: app.toml
.scaffold/compute/fft/: __init__.py  fft.cpp  fft.py  spectral.py
.scaffold/compute/math/: __init__.py  algebra.py  linalg.py  stats.py  transforms.py
.scaffold/compute/render/: gl_context.cpp  mesh_renderer.cpp  volume_renderer.cpp
.scaffold/compute/shaders/: compute.comp  fft.comp  volume.comp
.scaffold/compute/vulkan/: instance.cpp  layer.cpp  memory.cpp  pipeline.cpp
.scaffold/docs/: graphify_adoption.md
.scaffold/docs/noted/: README.md  torch_jit_deprecation.md
.scaffold/docs/qt/: 01_animation_framework.md  02_abstract_variant_animation.md  03_opacity_effect_and_fade.md  04_qss_dynamic_properties.md  05_state_machine.md  06_painter_custom_paint.md  07_qt_quick_escape_hatch.md  README.md
.scaffold/generators/: gen_model.py  gen_module.js  gen_shader.py  lang_detect.py  resolve.js  scaffold.py  scaffold.sh
.scaffold/git/: branch.sh  commit.sh  pr.sh
.scaffold/git/templates/: issue.md  pull_request.md
.scaffold/git/workflows/: ci.yml  ml-train.yml  release.yml
.scaffold/headers/: compute.h  conventions.h  deps.h  git.h  lang.h  math.h  ml.h  modes.h  platform.h  project.h  tuning.h  viz.h
.scaffold/hooks/: __init__.py  on_commit.py  on_commit.sh  on_enter.py  on_enter.sh  on_generate.py  on_generate.sh  on_hot_threshold.py  on_instance.py  on_instance.sh
.scaffold/imgui/: CMakeLists.txt  bridge.py  bridge_client.cpp  bridge_client.h  debug_panel.cpp  default_layout.ini  main.cpp  math_panel.cpp  node_editor.cpp  settings_panel.cpp  spectrogram_panel.cpp  training_panel.cpp  tuning_panel.cpp  volume_panel.cpp
.scaffold/includes/: cmake_scaffold.inc  file_header.inc  license.inc  model_scaffold.inc  shader_scaffold.inc  test_scaffold.inc
.scaffold/includes/reactions/: cartoon_comedy.inc  chaos_maximum.inc  mythic_wounded.inc  neutral_professional.inc  surreal_horror.inc  visceral_operatic.inc
.scaffold/instances/: README.md  instance.py  manager.py  transport.py
.scaffold/instances/shared/: queue.json  results.json
.scaffold/llm/: __init__.py  base.py  capabilities.py  config.py  factory.py  harness.py  providers.py
.scaffold/mcp/: __init__.py  resources.py  server.py  tools.py
.scaffold/ml/: __init__.py  config.py  export.py  model_io.py
.scaffold/ml/datasets/: __init__.py  base_dataset.py  dataloader.py  hf.py  transforms.py  vision.py
.scaffold/ml/models/: __init__.py  base_model.py  classifier.py  cnn.py  terra_lm.py  transformer.py
.scaffold/ml/training/: __init__.py  config.toml  evaluate.py  loggers.py  metrics.py  trainer.py
.scaffold/modes/: __init__.py  detector.py
.scaffold/query/: __init__.py  engine.py  parser.py
.scaffold/routes/: bugs.route  structure.route  tasks.route
.scaffold/sharpen/: __init__.py  analytics.json  cli.py  config.py  engine.py  tracker.py
.scaffold/skills/: registry.table  router.route  runner.py
.scaffold/skills/consistency_scan/: SKILL.toml  run.py
.scaffold/skills/generate/: SKILL.toml  run.py
.scaffold/skills/git_flow/: SKILL.toml  run.py
.scaffold/skills/graphify/: SKILL.toml  run.py
.scaffold/skills/health_check/: SKILL.toml  run.py
.scaffold/skills/hot_context/: SKILL.toml  run.py
.scaffold/skills/hot_decompose/: SKILL.toml  run.py
.scaffold/skills/instance_dispatch/: SKILL.toml  (+1 more)
.scaffold/tables/: deps.table  errors.table  patterns.table
.scaffold/tests/: test_algebra.py  test_ansi.py  test_app.py  test_app_host.py  test_browsers_panels.py  test_command_dialogs.py  test_external.py  test_fft.py  test_fonts.py  test_generators.py  test_harness.py  test_hot_decompose.py  test_hot_threshold.py  test_imgui_panel.py  test_integration.py  test_knowledge.py  test_lang_detect.py  test_layout.py  test_linalg.py  test_llm.py  test_math_solve.py  test_mcp.py  test_ml_config.py  test_ml_data.py  test_ml_export.py  test_ml_model_io.py  test_ml_models.py  test_ml_training.py  test_modes.py  test_query.py  test_sharpen.py  test_sidebar_chrome.py  test_signal_analyze.py  test_skills.py  test_spectral.py  test_stats.py  test_transforms.py  test_transport.py  test_tuning.py  test_viz.py  (+3 more)
.scaffold/tuning/: __init__.py  analytics.json  cli.py  config.py  engine.py  loader.py  schema.py  tracker.py
.scaffold/viz/: __init__.py  export.py  heatmap.py  spectrogram.py  stream.py  ultrasound.py
.scaffold/worktree/: __init__.py  context.py  manager.py
additions/: kohala_theme.qss  terragraf_mainwindow_shot.py  terragraf_preview.html  terragraf_preview.py  terragraf_preview_web.py
projects/: KNOWLEDGE.toml  knowledge_reader.py  knowledge_writer.py
(+67 files in other folders)
